--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -303,7 +303,7 @@ s_{people}^2 &= MSE_{people}\\
 \end{aligned}
 $$
 
-**IMPORTANT:** The denominator of this variance calculation is $12$ (i.e., a(n-1)=3(5-1)=3(4)=12$). Therefore, we say there are 12 degrees of freedom associated with this estimate of the variance of the people in the population.
+**IMPORTANT:** The denominator of this variance calculation is $12$ (i.e., $a(n-1)=3(5-1)=3(4)=12$). Therefore, we say there are 12 degrees of freedom associated with this estimate of the variance of the people in the population.
 
 
 
